[workspace]
name = "rust-the-book"
version = "0.1.0"
edition = "2021"
members = [
    "loops",
    "ownership",
    "references_and_borrowing",
    "the_slice_type",
    "struct",
    "enum",
    "match",
    "backyard",
    "restaurant",
    "vectors",
    "strings",
    "hash_maps",
    "collections",
    "errors",
    "generic_data_types",
    "traits",
    "lifetimes",
    "adder",
    "minigrep",
    "closures",
    "iterators",
    "my_crates",
    "pointer_box",
    "my_box",
    "drop",
    "reference_count",
    "ref_cell",
]

[profile.dev]
opt-level =1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
